# telegram-automation

./: .gitignore  404.html  DEPLOYMENT.md  Makefile  README.md  README_PRODUCTION.md  analysis_report.md  automatic_docs_access_guide.md  backend_api_docs.md  documentation_generation_report.md  index.html  installation.md  mkdocs.yml  unused_modules_report.md  usage.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build_docs.yml  cd-prod.yml  ci-backend.yml  ci-frontend.yml  main.yml
backend/: .env.example  example.env  pyproject.toml  requirements.txt  run.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/v1/: auth.py  blacklist.py  groups.py  messages.py  scheduler.py  settings.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/crud/: base.py  user.py
backend/app/middleware/: cors.py  error_handler.py  rate_limiting.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/routers/: auth.py  blacklist.py  groups.py  messages.py  scheduler.py  settings.py
backend/app/services/: auth_service.py  blacklist_service.py  group_service.py  message_service.py  scheduler_service.py  telegram_service.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_auth_api.py
backend/app/tests/unit/: test_security.py
backend/app/utils/: encryption.py  validators.py
backend/docs/source/: conf.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend_api_docs/: index.html
backend_sphinx_html/: api.html  genindex.html  index.html  objects.inv  searchindex.js
backend_sphinx_html/_sources/: index.rst.txt
docs/: architecture.md  architecture.puml  backend_api_docs.md  deployment.md  index.md  installation.md  mkdocs.yml  openapi.json  usage.md
docs/backend_sphinx_html/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/backend_sphinx_html/_sources/: api.rst.txt
docs/backend_sphinx_html/_static/: documentation_options.js
docs/docs/: backend_api_docs.md  docstring_best_practices.md  index.md  installation.md  usage.md
docs/site/: 404.html  index.html
docs/site/backend_api_docs/: index.html
docs/site/installation/: index.html
docs/site/search/: search_index.json
docs/site/usage/: index.html
docstring_best_practices/: index.html
frontend/: .env.example  .eslintrc.cjs  eslint.config.js  example.env  index.html  jest.config.js  jsdoc.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/docs/: .gitignore
frontend/docs/jsdoc/: index.html
frontend/src/: App.jsx  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.jsx  Dashboard.tsx  ErrorBoundary.tsx  Layout.jsx
frontend/src/components/auth/: CodeVerification.jsx  LoginForm.jsx  TwoFactorAuth.jsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  hover-card.tsx  input-otp.tsx  (+18 more)
frontend/src/hooks/: useAuth.jsx  useAuth.ts  useAuth.tsx  useFormValidation.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  index.ts
frontend/src/routes/: AppRouter.tsx  index.ts
frontend/src/styles/: globals.css  index.ts
frontend/src/tests/: setup.ts
frontend_jsdoc/: index.html
infra/docker/: Dockerfile.backend  Dockerfile.frontend  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
infra/nginx/: default.conf
infra/scripts/: backup-db.sh  migrate.sh
installation/: index.html
search/: search_index.json
usage/: index.html
(+4 files in other folders)
